fixed z-index

--- a/src/pages/sign-up/componentSignUp/componentSignUp.module.css
+++ b/src/pages/sign-up/componentSignUp/componentSignUp.module.css
@@ -142,4 +142,5 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index: 100;
   }
